--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,8 @@
 $color-primary: #ef4444;
 $color-secondary: #6b7280;
 $color-success: #10b981;
-$color-danger: #ef4444;
+$color-danger: #dc3545; // o tu color de error
+$color-danger-border: #f1a7a7; // un borde mas claro para el error
 $color-warning: #f59e0b;
 $color-info: #3b82f6;
 
