--- a/src/components/dashboard/styles/_dashboard.scss
+++ b/src/components/dashboard/styles/_dashboard.scss
@@ -20,6 +20,37 @@
     margin-bottom: $spacing-6;
   }
 
+  &__header {
+    display: flex;
+    margin-bottom: $spacing-6;
+    
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
+  }
+
+  &__issues {
+    display: flex;
+    align-items: center;
+    gap: $spacing-4;
+    margin-left: auto;
+    
+    @media (max-width: 1280px) {
+      flex-wrap: wrap;
+    }
+    
+    @media (max-width: 1024px) {
+      margin-left: 0;
+      margin-top: $spacing-4;
+      justify-content: space-between;
+    }
+    
+    @media (max-width: 640px) {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  }
+
   &__grid {
     @include grid(3, $spacing-6); // Usa el mixin directamente
     margin-bottom: $spacing-6;
