ajustes dashboard estilos

--- a/src/components/dashboard/styles/_dashboard.scss
+++ b/src/components/dashboard/styles/_dashboard.scss
@@ -15,6 +15,7 @@
 @use 'issuestable'; // Añadir el nuevo archivo
 
 // Dashboard page specific styles
+
 .dashboard {
   &__two-column-layout {
     display: flex;
@@ -118,5 +119,18 @@
         grid-template-columns: 1fr;
       }
     }
+  }
+}
+.dashboard__container__resources {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: $spacing-6;
+  
+  @media (max-width: 1200px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  @media (max-width: 640px) {
+    grid-template-columns: 1fr;
   }
 }
