--- a/src/components/dashboard/styles/_dashboard.scss
+++ b/src/components/dashboard/styles/_dashboard.scss
@@ -46,7 +46,7 @@
 
   &__header {
     display: flex;
-    margin-bottom: $spacing-6;
+    margin-bottom: $spacing-2;
     
     @media (max-width: 1024px) {
       flex-direction: column;
@@ -56,7 +56,7 @@
   &__issues {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: $spacing-4;
     
     @media (max-width: 1280px) {
@@ -86,10 +86,10 @@
   &__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: $spacing-6;
+    gap: $spacing-2;
     
     &--resources {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       
       @media (max-width: 1200px) and (min-width: 1025px) {
         grid-template-columns: repeat(2, 1fr);
