--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,13 +6,14 @@
 @use '../components/onboarding/styles/onboarding-steps';
 @use '../components/common/styles/progress-indicator';
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+#root {
+  margin: 0 auto;
+  text-align: left;
+  max-width: 1600px;
 }
 
 body {
+  font-family: 'Inter', sans-serif;
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: 1.5;
@@ -25,3 +26,48 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   line-height: 1.2;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
+
+
