riskchart y scan proress diseño

--- a/src/components/dashboard/styles/_riskchart.scss
+++ b/src/components/dashboard/styles/_riskchart.scss
@@ -8,7 +8,7 @@
   padding: 1.25rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   height: 100%;
 
   &__title {
@@ -30,6 +30,7 @@
     position: relative;
     width: 200px;
     height: 200px;
+    margin-left: 25px;
 
     @media (max-width: 768px) {
       width: 150px;
@@ -147,6 +148,7 @@
     display: flex;
     align-items: center;
     gap: 0.75rem;
+    color: #9ca3af;
   }
 
   &__level-count {
@@ -159,4 +161,9 @@
     font-size: 0.75rem;
     color: $color-gray-500;
   }
+}
+.risk-chart__titles_container{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
 }
