--- a/src/components/dashboard/styles/_scanprogress.scss
+++ b/src/components/dashboard/styles/_scanprogress.scss
@@ -107,20 +107,23 @@
     justify-content: space-between;
 
     &__item {
+      //import card mixin from variables
+      @include card;
       text-align: center;
+      font-weight: 700;
 
-      .value {
-        font-size: 1.25rem;
+      &__value {
+        font-size: 2.25rem;
         font-weight: bold;
-        color: inherit;
+        color: $color-gray-400;
         &.red {
           color: #EF4444;
         }
       }
 
-      .label {
+      &__label {
         font-size: 0.75rem;
-        color: #6B7280;
+        color: #35373b;
         text-transform: uppercase;
       }
     }
