--- a/src/components/dashboard/styles/_sidebar.scss
+++ b/src/components/dashboard/styles/_sidebar.scss
@@ -14,6 +14,7 @@
   }
 
   &__nav {
+    margin-top: 15px;
     padding: $spacing-4;
   }
 
@@ -23,7 +24,7 @@
     &-title {
       text-transform: uppercase;
       color: $color-gray-700;
-      font-size: $font-size-xs;
+      font-size: $font-size-sm;
       font-weight: 600;
       letter-spacing: 0.05em;
       margin-bottom: $spacing-2;
