--- a/src/components/dashboard/styles/_statcard.scss
+++ b/src/components/dashboard/styles/_statcard.scss
@@ -3,11 +3,14 @@
 
 .stat-card {
   @include card;
+  width: 100%;
+  text-align: center;
+  font-weight: 900;
 
   &__title {
     font-size: $font-size-xs;
     text-transform: uppercase;
-    color: $color-gray-500;
+    color: $color-gray-700;
     margin-bottom: $spacing-1;
   }
 
@@ -19,12 +22,8 @@
       color: $color-danger;
     }
 
-    &--blue {
-      color: $color-info;
-    }
-
     &--gray {
-      color: $color-gray-600;
+      color: $color-gray-400;
     }
   }
 
