--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $color-primary: #ef4444;
+$color-red-500: #ef4444;
 $color-secondary: #6b7280;
 $color-success: #10b981;
 $color-danger: #dc3545;
