--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .onboarding-layout__logo, .onboard-card__logo{
-  color: #ef4444;
+  color: $color-red-500;
   font-size: 2em;
 }
 
