--- a/src/components/dashboard/styles/_sidebar.scss
+++ b/src/components/dashboard/styles/_sidebar.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/mixins' as *;
 
 .sidebar {
   width: $sidebar-width;
@@ -6,6 +7,12 @@
   box-shadow: $shadow-md;
   height: 100vh;
   overflow-y: auto;
+
+  &__profie{
+    &-button{
+      @include button($color-gray-200);
+    }
+  }
 
   &__logo {
     padding: $spacing-4;
